# robocross-software

./: CMakeLists.txt  README.md  notes.txt  package.xml
config/: camera_driver.yaml  cloud_to_scan.yaml  global_mapping.yaml  gz_remapings.yaml  local_mapping.yaml  movement_controller.yaml  path_controller.yaml  path_mapping.yaml  path_planning.yaml  sim.yaml  waypoint_following.yaml
launch/: gz.launch.py  sim.launch.py  state_publisher.launch.py
model/: car_bot.urdf.xml  granta.urdf.xml  robocross_trial.sdf.xml
rviz/: car_bot.rviz
scripts/: camera_driver.py  cloud_to_scan.py  global_mapping.py  local_mapping.py  mapping.py  movement_controller.py  path_controller.py  path_mapping.py  path_planning.py  pathfinding.py  utils.py  waypoint_following.py
src/: imu.cpp  imu1.cpp  odometry1.cpp
